--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <section id="navSection">
         <nav id="navigation">
           <p id="now_playing">
-            <a href="#">Now Playing</a>
+            <a href="">Now Playing</a>
           </p>
           <p id="popular">
-            <a href="#">Popular</a>
+            <a href="">Popular</a>
           </p>
           <p id="top_rated">
-            <a href="#">Top Rated</a>
+            <a href="">Top Rated</a>
           </p>
           <p id="upcoming">
-            <a href="#">Upcoming</a>
+            <a href="">Upcoming</a>
           </p>
         </nav>
       </section>
