pushing to work on home pc

--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
   <body>
     <header id="title">
       <h1>The Movie Database</h1>
+    </header>
       <section id="navSection">
         <nav id="navigation">
-          <p id="now_playing">
-            <a href="">Now Playing</a>
-          </p>
-          <p id="popular">
-            <a href="">Popular</a>
-          </p>
-          <p id="top_rated">
-            <a href="">Top Rated</a>
-          </p>
-          <p id="upcoming">
-            <a href="">Upcoming</a>
-          </p>
+          <ul>
+            <li>
+              <button id="now_playing">Now playing</button>
+            </li>
+
+            <li>
+              <button id="popular">Popular</button>
+            </li>
+
+            <li>
+              <button id="top_rated">Top Rated</button>
+            </li>
+
+            <li>
+              <button id="upcoming">Upcoming</button>
+            </li>
+          </ul>
         </nav>
       </section>
-    </header>
     <main>
-      <section id="movie_list">
-
-      </section>
+      <section id="movie_list"></section>
     </main>
 
     <footer id="footer">&copy; 2023-2024 Oliver Jenbo</footer>
